# otus-cpp-2020

./: .clang-format-ignore  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  ip_filter_dto.h  ip_input_adapter.h  lib.cpp  lib.h  main.cpp  test_version.cpp  ver.cpp
docs/: hw-01-unit1-task2.md  hw-02-unit6-task1.md
hw-01/: CMakeLists.txt  ip_filter_controller.h  ip_filter_logic.h  ver.h
hw-01/test/: test_ip_input_adapter.cpp  test_version.cpp
hw-02/: CMakeLists.txt  custom_allocator.hpp  custom_forward_list.hpp  main.cpp
hw-02/acm/: CMakeLists.txt  acm1264.cpp  acm1264.h  acm1409.cpp  acm1409.h  acm1787.cpp  acm1787.h  acm1877.cpp  acm1877.h  acm2001.cpp  acm2001.h  test_acm1264.cpp  test_acm1409.cpp  test_acm1787.cpp  test_acm1877.cpp  test_acm2001.cpp
hw-02/math/: factorial.hpp
hw-02/test/: test_factorial.cpp
scripts/: check-deploy.sh  check-ip-filter.sh
test/: test_ip_filter_controller.cpp  test_ip_filter_logic.cpp
